New semi Invulnerable action (#344)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -103,6 +103,7 @@ action.vampirism.vampire.vampire_rage=Vampire Rage
 action.vampirism.vampire.sunscreen=Sunscreen
 action.vampirism.vampire.disguise=Disguise
 action.vampirism.vampire.dark_blood_projectile=Dark Blood Projectile
+action.vampirism.vampire.halfinvulnerable_skill=Damage Limiter
 
 #HUNTER ACTIONS
 action.vampirism.hunter.disguise=Disguise
